--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
-    {{ content }}
+    {% include navigation.html %}
+    <div class="content">
+      {{ content }}
+    </div>
   </body>
 </html>
