--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,40 +1,11 @@
 .content {
     text-align: justify;
+    margin-left: 5%;
+    margin-right: 5%;
+    font-size: 3em;
 }
 
-@media screen and (max-width: 310px) {
-    .content {
-        margin-left: 2%;
-        margin-right: 2%;
-        font-size: 0.2em;
-    }
-}
-
-@media screen and (min-width: 320px) {
-    .content {
-        margin-left: 2%;
-        margin-right: 2%;
-        font-size: 1em;
-    }
-}
-
-@media screen and (min-width: 480px) {
-    .content {
-        margin-left: 2%;
-        margin-right: 2%;
-        font-size: 1.8em;
-    }
-}
-
-@media screen and (min-width: 600px) {
-    .content {
-        margin-left: 10%;
-        margin-right: 10%;
-        font-size: 1.4em;
-    }
-}
-
-@media screen and (min-width: 900px) {
+@media screen and (any-hover) {
     .content {
         margin-left: 20%;
         margin-right: 20%;
