--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -40,11 +40,14 @@
 }
 
 .site-navigation {
-  font-size: 5em;
+  font-size: 2em;
 } 
 
-@media screen and (any-hover) {
+@media only screen and (-webkit-min-device-pixel-ratio: 3), 
+       only screen and (-min--moz-device-pixel-ratio: 3), 
+       only screen and (-o-min-device-pixel-ratio: 3/1), 
+       only screen and (min-device-pixel-ratio: 3) {
   .site-navigation {
-    font-size: 2em;
+    font-size: 5em;
   } 
 }
