--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
-    {% include navigation.html %}
+    {% include header.html %}
     <div class="content">
       {{ content }}
     </div>
+    {% include footer.html %}
   </body>
 </html>
