--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,6 +5,13 @@
     font-size: 1.8em;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 @media only screen and (-webkit-min-device-pixel-ratio: 3),
 only screen and (-min--moz-device-pixel-ratio: 3),
 only screen and (-o-min-device-pixel-ratio: 3/1),
