--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,7 +2,19 @@
     text-align: justify;
     margin-left: 20%;
     margin-right: 20%;
-    font-size: 1.8em;
+    font-size: 1.4em;
+}
+
+.profile-image {
+    width: 300px; /* Adjust the size as needed */
+    height: 400px; /* Adjust the size as needed */
+    border-radius: 50%; /* Makes the image circular */
+    display: block;
+    margin: 0 auto; /* Centers the image */
+}
+
+.landing-text {
+    text-align: center;
 }
 
 html, body {
